$Id: History,v 1.11 2000-08-11 10:33:01 maire Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
     
11 Aug 00 mma
   tag stand-V02-00-01     

10 Aug 00 V.Ivanchenko
-  Change G4VhEnergyLoss.cc, G4VhEnergyLoss.hh, G4hIonisation.cc 
   in order to simulate energy losses of ions; correction to
   cross section for particles with spin 1 is inserted as well.
   Class G4ionIonisation is removed. 

03 Aug 00 Gabriele Cosmo
- Fixes for events' reproducibility:
  o G4GammaConversion.cc: changed usage of RandFlat::shootBit() to
    RandBit::shootBit().
  o G4VIeEnergyLoss.cc, G4VIhEnergyLoss.cc, G4PAIxSectionTest.cc:
    changed RandGauss to G4RandGauss.

31 Jul 00 Gonzalo Gracia
- G4IhIonisation.cc: initialisisation to zero of several  G4PhysicsTable*
  is included in constructor. Some tests were crashing 
  on NT because of the missing initialisation

18 jul 00: V.Ivanchenko (stand-V01-??)
- fix in G4VhEnergyLoss and G4ionIonisation in AlongStepDoIt 
  for particles with Charge^2 > 1; Reorganisation in
  GetConstrain for G4ionIonisation
     
22 jun 00: mma (stand-V01-01-05)
- stop very low energy photons in photo electric effect
- ElossMessenger moved --> G4VEnergyLoss
       
13 jun 00: mma (stand-V01-01-04)