@@ -1,4 +1,4 @@
-$Id: History,v 1.11 2000-08-11 10:33:01 maire Exp $
+$Id: History,v 1.12 2000-11-01 15:30:45 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,7 +16,13 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
-     
+
+01 Nov 00 G.Cosmo (stand-V02-00-02)
+-  Removed useless dependencies from GNUmakefile.
+-  G4SynchrotronRadiation: added "const" qualifier to usage of
+   const G4Field*. Co-works with tag "field-V02-00-00" and related ones
+   from geometry.
+
 11 Aug 00 mma
    tag stand-V02-00-01     
 
